Actions
Bug #3157
opennfs: wrong utf8-encoded string should be cause of error
Start date:
2012-09-05
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
Description
Server should return INVAL on wrong encoded string, but NFS4_OK are returned.
Updated by Rich Lowe over 9 years ago
- Status changed from Feedback to Resolved
Resolved in r13824 commit:17189d594419
Updated by Rich Lowe over 9 years ago
- Status changed from Resolved to Feedback
Backed out in r13838 commit:eed531da8f67
Updated by Marcel Telka over 8 years ago
It looks like this is not a bug and there is nothing which needs to be fixed.
In any case: Daniil, how could I reproduce the issue?
Actions