3157 nfs: wrong utf8-encoded string should be cause of error Reviewed by: Eric Schrock <eric.schrock@delphix.com> Approved by: Richard Lowe <richlowe@richlowe.net>